--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -823,7 +823,7 @@ meter.p0time, meter.p1time {
   text-align: center;
   float: left;
   background: transparent;
-  color: white;
+  color: black;
   border: none;
   margin: 10px 5%;
   width: 45%;
@@ -831,6 +831,7 @@ meter.p0time, meter.p1time {
   margin-top: -17px;
   z-index: 1;
   position: relative;
+ font-weight: bold;
 }
 
 #lifepoints input.p1lp {
