--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1517,6 +1517,9 @@ div[data-game^="32"] {
 
 
 [data-nostalgia] {
+    background: url('../img/newgiohtoken.png');
+}
+[data-newgioh] {
     background: #e8aa2e; /* Old browsers */
     background: -moz-linear-gradient(left,  #e8aa2e 0%, #ed7d7d 19%, #ed7d7d 19%, #2989d8 66%, #ff0000 100%) !important; /* FF3.6+ */
     background: -webkit-gradient(linear, left top, right top, color-stop(0%,#e8aa2e), color-stop(19%,#ed7d7d), color-stop(19%,#ed7d7d) !important, color-stop(66%,#2989d8), color-stop(100%,#ff0000)); /* Chrome,Safari4+ */
