missing css for Leod suggestions

--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -438,6 +438,10 @@ div#gamelistitems {
     height: 70vh;
 }
 
+div#gamelistitems {
+    overflow-y: scroll;
+    height: 70vh;
+}
 .game.started {
     opacity: 1;
     border-color: grey;
