--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1524,15 +1524,19 @@ div[data-game^="32"] {
 }
 
 .started[data-bad] {
-    background:rgba(255,0,0,.5) !important;
+    background:rgba(0,0,0,.5) !important;
     border: 1px solid red;
 }
 [data-newgioh] {
   background-image: url('../img/newgiohtoken.png') !important;
-  background-color: #aa0!important;
+  background-color: gold !important;
   background-size: auto 100% !important;
   text-shadow: 0px 0px 19px black;
   background-repeat: no-repeat !important;
+}
+.started[data-newgioh] {
+    background-color:rgba(0,0,0,.5) !important;
+    border: 1px solid gold;
 }
 
 [data-nostalgia] {
