--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1540,20 +1540,18 @@ div[data-game^="32"] {
   background-repeat: no-repeat !important;
 }
 .started[data-newgioh] {
+    background-image: url('../img/outnewgiohtoken.png') !important;
     background-color:rgba(0,0,0,.5) !important;
-    border: 1px solid gold;
+    border: 1px solid grey;
+    color: grey;
 }
 
 [data-nostalgia] {
-    background: #e8aa2e; /* Old browsers */
-    background: -moz-linear-gradient(left,  #e8aa2e 0%, #ed7d7d 19%, #ed7d7d 19%, #2989d8 66%, #ff0000 100%) !important; /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#e8aa2e), color-stop(19%,#ed7d7d), color-stop(19%,#ed7d7d) !important, color-stop(66%,#2989d8), color-stop(100%,#ff0000)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left,  #e8aa2e 0%,#ed7d7d 19%,#ed7d7d 19%,#2989d8 66%,#ff0000 100%) !important; /* Chrome10+*/
-    background: -o-linear-gradient(left,  #e8aa2e 0%,#ed7d7d 19%,#ed7d7d 19%,#2989d8 66%,#ff0000 100%) !important; /* Opera 11.10+ */
-    background: -ms-linear-gradient(left,  #e8aa2e 0%,#ed7d7d 19%,#ed7d7d 19%,#2989d8 66%,#ff0000 100%)!important; /* IE10+ */
-    background: linear-gradient(to right,  #e8aa2e 0%,#ed7d7d 19%,#ed7d7d 19%,#2989d8 66%,#ff0000 100%)!important; /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8aa2e', endColorstr='#ff0000',GradientType=1 ) !important; /* IE6-9 */
-
+    background-image: url('../img/goat.png') !important;
+    background-color: white !important;
+    background-size: auto 100% !important;
+    text-shadow: 0px 0px 19px black;
+    background-repeat: no-repeat !important;
 }
 div#news {
   /* width: 80%; */
