--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1548,7 +1548,7 @@ div[data-game^="32"] {
 
 [data-nostalgia] {
     background-image: url('../img/goat.png') !important;
-    background-color: white !important;
+    background-color: rgba(0,0,0,.5) !important;
     background-size: auto 100% !important;
     text-shadow: 0px 0px 19px black;
     background-repeat: no-repeat !important;
