--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1534,7 +1534,7 @@ div[data-game^="32"] {
 }
 [data-newgioh] {
   background-image: url('../img/newgiohtoken.png') !important;
-  background-color: gold !important;
+  background-color: rgba(255,255,0,.5) !important;
   background-size: auto 100% !important;
   text-shadow: 0px 0px 19px black;
   background-repeat: no-repeat !important;
@@ -1552,6 +1552,13 @@ div[data-game^="32"] {
     background-size: auto 100% !important;
     text-shadow: 0px 0px 19px black;
     background-repeat: no-repeat !important;
+    border: 1px solid pink;
+}
+.started[data-nostalgia] {
+    background-image: url('../img/outnewgiohtoken.png') !important;
+    background-color:rgba(0,0,0,.5) !important;
+    border: 1px solid grey;
+    color: grey;
 }
 div#news {
   /* width: 80%; */
