--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1576,6 +1576,101 @@ select {
 .game:not(.started) {
   /*-webkit-animation: outpulse 300ms;*/
 }
+
+
+/* DECKFIELDS */
+#mainDeckHeader{
+    position: absolute;
+    left: 200px;
+    width: 600px;
+    height: 16px;
+    border: 1px solid silver;
+    padding: 10px;
+    border: 1px solid silver;
+    z-index: 10;
+}
+#mainDeck{
+    position: absolute;
+    top: 75px;
+    left: 200px;
+    width: 600px;
+    height: 350px;
+    border: 1px solid silver;
+    padding: 10px;
+    border: 1px solid silver;
+    z-index: 10;
+}
+#xtraDeck{
+    position: absolute;
+    left: 200px;
+    top: 490px;
+    width: 600px;
+    height: 100px;
+    border: 1px solid silver;
+    padding: 10px;
+}
+#xtraDeckHeader{
+    position: absolute;
+    top: 455px;
+    left: 200px;
+    width: 610px;
+    height: 16px;
+    border: 1px solid silver;
+    padding: 5px;
+    border: 1px solid silver;
+}
+#sideDeckHeader{
+    position: absolute;
+    left: 200px;
+    top: 620px;
+    width: 610px;
+    height: 16px;
+    border: 1px solid silver;
+    padding: 5px;
+}
+#sideDeck{
+    position: absolute;
+    left: 200px;
+    top: 655px;
+    width: 600px;
+    height: 100px;
+    border: 1px solid silver;
+    padding: 10px;
+}
+
+/* Dragable Pics */
+.makeMeDraggable {
+    
+    width: 44px; 
+    height: 64px;
+    z-index: 999999;
+}
+#card-container{
+    height: 500px;
+    width: 250px;
+    float: right;
+    position: absolute;
+    left: 820px;
+    z-index: 1000;
+    overflow-y:scroll; 
+}
+
+#cardPic{
+    position: absolute;
+
+    width: 178px;
+    height: 255px;
+    border: 1px solid silver;
+    z-index: 1000;
+}
+#cardDesc{
+    position: absolute;
+    top: 270px;
+    width: 178px;
+    height: 255px;
+    border: 1px solid silver;
+    z-index: 1000;
+}
         @-webkit-keyframes outpulse {
           from {  -webkit-box-shadow: 0 0 3px rgba(255,255,255,0); }
           50% {  -webkit-box-shadow: 0 0 18px white; }
