--- a/server/http/css/main.css
+++ b/server/http/css/main.css
@@ -1533,7 +1533,7 @@ div[data-game^="32"] {
 
 .started[data-bad] {
     background: rgba(0, 0, 0, .5) !important;
-    border: 1px solid red;
+    border: 1px solid grey;
 }
 
 [data-newgioh] {
